<resources>
    <string name="app_name">Fintech Charity</string>
    <string name="prompt_username">მომხმარებლის სახელი</string>
    <string name="prompt_password">პაროლი</string>
    <string name="action_sign_in">შესვლა</string>
    <string name="action_sign_in_short">შესვლა</string>
    <string name="error_incorrect_password">პაროლი არასწორია</string>
    <string name="error_field_required">ველის შევსება სავალდებულოა</string>
    <string name="action_settings">პარამეტრები</string>
    <string name="action_next">შემდეგ</string>
    <string name="action_back">უკან</string>
    <string name="select_beneficiary">ბენეფიციარის არჩევა</string>
    <string name="select_payment_scheme">გადახდის სქემის არჩევა</string>
    <string name="payment_scheme_percentage">გადახდილი თანხის %</string>
    <string name="payment_scheme_round">დამრგვალება</string>
    <string name="title_activity_main">ინფორმაცია</string>
    <string name="hello">გამარჯობა, %1$s</string>
    <string name="logout">გასვლა</string>
    <string name="selectedPaymentScheme">არჩეული გადახდის სქემა:</string>
    <string name="selectedBeneficiary">არჩეული ბენეფიციარი:</string>
    <string name="paymentScheme_percentage">გადახდილი თანხის %1$d პროცენტი</string>
    <string name="paymentScheme_percentage_withLimit">გადახდილი თანხის %1$d%, %2$d ლარამდე</string>
    <string name="paymentScheme_round">თანხის დამრგვალება %1$d ლარამდე</string>
    <string name="labelPercentage">გადახდილი თანხის %</string>
    <string name="labelUpperLimit">ზედა ზღვარი</string>
    <string name="selectRound1">1 ლარამდე</string>
    <string name="selectRound5">5 ლარამდე</string>
    <string name="action_save">შენახვა</string>
    <string name="action_start_service">სერვისის ჩართვა</string>
</resources>
