<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".BeneficiaryFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/select_payment_scheme"
        app:titleTextColor="#ffffff" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true">

        <RadioButton
            android:id="@+id/selectPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/payment_scheme_percentage"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/formPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/inputPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/labelUpperLimit" />

            <EditText
                android:id="@+id/inputUpperLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/selectRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/payment_scheme_round"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/formRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">


            <RadioButton
                android:id="@+id/selectRound1"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/selectRound1"
                android:textSize="20sp" />


            <RadioButton
                android:id="@+id/selectRound5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/selectRound5"
                android:textSize="20sp" />
        </RadioGroup>
    </RadioGroup>

    <Button
        android:id="@+id/buttomButton"
        style="@style/AppTheme.BottomButton.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/action_next"
        android:textSize="20sp" />

</LinearLayout>