<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--<ImageView-->
        <!--android:id="@+id/clientImage"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--tools:srcCompat="@tools:sample/avatars[6]" />-->

        <TextView
            android:id="@+id/clientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="გამარჯობა, ნიკა" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/selectBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/selectedBeneficiary" />

        <include
            android:id="@+id/includeBeneficiary"
            layout="@layout/layout_beneficiary_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectPaymentScheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/selectedPaymentScheme" />

        <TextView
            android:id="@+id/selectedPaymentScheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="გადახდილი თანხის 5%" />
    </LinearLayout>


    <Button
        android:id="@+id/start_service_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:text="@string/action_start_service"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bottomButton"
        style="@style/AppTheme.BottomButton.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/action_save"
        android:textSize="20sp" />

</LinearLayout>